tests/baselines/reference/noUnusedLocals_writeOnlyProperty.errors.txt
noUnusedLocals_writeOnlyProperty.ts(2,13): error TS6133: 'x' is declared but its value is never read.


==== noUnusedLocals_writeOnlyProperty.ts (1 errors) ====
    class C {
        private x;
                ~
!!! error TS6133: 'x' is declared but its value is never read.
        m() {
            this.x = 0;
        }
    }
    